--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 Revision history for Perl extension Acme::rafl::Everywhere.
 
-0.001
+0.002   04.07.2012
+        * Some fixes.
+        * Added more facts.
+        * New fact by vti!
+        * Added request for help.
+
+0.001   03.07.2012
         * rafl is so everywhere, his everywhere module is now on CPAN!
