--- a/README.pod
+++ b/README.pod
@@ -6,7 +6,7 @@ Acme::rafl::Everywhere - rafl is so everywhere, he has his own Acme module!
 
 =head1 VERSION
 
-version 0.001
+version 0.002
 
 =head1 AUTHOR
 
@@ -40,6 +40,12 @@ for too long, because he really is everywhere.
 L<Moose>, L<MooseX::Declare>, L<Catalyst>, L<Dist::Zilla>, L<signatures>,
 L<KiokuDB>, L<Gtk2>, Perl core, MetaCPAN and GSoC are just I<some> of the
 projects he's involved in.  
+
+=head1 HELP ADD MORE FACTS
+
+Please add more facts! We accept pull requests, patches, emails, IRC messages,
+fortune cookie notes, sky writings, scribbled messages on public bathroom
+stalls, inappropriate mid-meeting whispers, and more.
 
 =head1 BUGS
 
