--- a/README.pod
+++ b/README.pod
@@ -6,7 +6,7 @@ Acme::rafl::Everywhere - rafl is so everywhere, he has his own Acme module!
 
 =head1 VERSION
 
-version 0.002
+version 0.003
 
 =head1 AUTHOR
 
@@ -40,6 +40,9 @@ for too long, because he really is everywhere.
 L<Moose>, L<MooseX::Declare>, L<Catalyst>, L<Dist::Zilla>, L<signatures>,
 L<KiokuDB>, L<Gtk2>, Perl core, MetaCPAN and GSoC are just I<some> of the
 projects he's involved in.  
+
+There is proof for at least one fact noted by this distribution:
+http://t.co/jcne0k4p, taken at YAPC::EU 2012.
 
 =head1 HELP ADD MORE FACTS
 
