--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Acme::rafl::Everywhere.
 
+0.005   06.10.1012
+        * Added contributors section.
+
 0.004   06.10.2012
         * Added another fact by Getty & Toby Inkster.
         * GH #3: Fixed idempotency by defining facts in code (thanks, Toby Inkster).
