--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension Acme::rafl::Everywhere.
 
-0.005   06.10.1012
+0.006   06.10.2012
+        * More facts collected by new lead investigator: garu.
+
+0.005   06.10.2012
         * Added contributors section.
 
 0.004   06.10.2012
